# farpost-parser

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  links.example.csv  main.py  proxies.example.csv  pyproject.toml
core/: link.py  proxy.py  settings.py
helpers/: parse_html.py  send_email.py
parser/: parser.py
